# betlo

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  CDP_ERROR_FINAL_FIX.md  FINAL_FIXES_v2.md  FIXES_SUMMARY.md  LICENSE  README.md  RELEASE_v4.0.0.md  activate.sh  ad_blocklist.txt  check_vps.sh  config.yaml  fix_chrome.sh  format.sh  install.sh  install_chrome_vps.sh  pyproject.toml  requirements.txt  run.py  run_xvfb.sh  target_progress.json  test_zefoy.sh  venv.sh
.github/workflows/: format-check.yml  main.yml
betlo/: __init__.py  __main__.py  bot.py  captcha_solver.py  logger.py  main.py  target_tracker.py  utils.py
docs/: AGGRESSIVE_OCR_MODE.md  AUTO_OPEN_CAPTCHA_FEATURE.md  BANNER.md  CDP_ERROR_FINAL_FIX.md  CHANGELOG.md  CHROME_TROUBLESHOOTING.md  CLOUD_CAPTCHA_UPLOAD.md  COOLDOWN.md  DISPLAY_MODES.md  FAQ.md  FINAL_FIXES_v2.md  FIXES_SUMMARY.md  FORMATTING.md  HEADLESS_MODE_GUIDE.md  HEADLESS_STEALTH.md  INDEX.md  INSTALLATION.md  OCR_TROUBLESHOOTING.md  PRE_COMMIT_GUIDE.md  STATISTICS.md  STUCK_HEADLESS_FIX.md  UNIFIED_INSTALLER.md  UNIFIED_RUNNER.md  USAGE_GUIDE.md  VPS_CDP_FIX.md  VPS_SETUP.md  ZEFOY_DETECTION_FIX.md  ZEFOY_HEADLESS_FIX.md
zefoy_bot/: __init__.py  __main__.py  bot.py  captcha_solver.py  config.py  service_manager.py
